--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-# Existing Repository Requirements
-langchain=0.0.305
-openai=0.28.1
-pydantic>=1.10.12
-pytest>=7.4.0
-sentence-transformers>=2.2.0
-transformers>=4.31.0
-chromadb==0.4.12
-jupyter==1.0.0
-tiktoken==0.4.0
+langchain==0.1.12
+openai==1.14.2
+transformers==4.38.2
+torch==2.2.1
+numpy==1.26.4
+pandas==2.2.1
+scikit-learn==1.6.1
+scipy==1.15.2
+sentence-transformers==2.5.1
+lancedb==0.21.1
+tiktoken==0.6.0
+python-dotenv==1.0.1
